@@ -15,17 +15,17 @@ import java.util.stream.Collectors;
  * Implementation of IProductService containing business logic.
  * Following Single Responsibility Principle (SRP) - only handles business logic.
  * Depends on abstractions (IProductRepository interface) not concretions (DIP).
- * 
+ *
  * @RequiredArgsConstructor generates constructor with final fields (Dependency Injection)
  */
 
 @Service
 @RequiredArgsConstructor
 public class ProductService implements IProductService {
-    
+
     @NonNull
     private final IProductRepository productRepository;
-    
+
     @NonNull
     private final AIProductGenerator aiProductGenerator;
 
@@ -35,7 +35,7 @@ public class ProductService implements IProductService {
     }
 
     @Override
-    public Product getProductById(@NonNull String id) {
+    public Product getProductById(String id) {
         if (id.trim().isEmpty()) {
             throw new InvalidParameterException("id", id, "Product ID cannot be empty");
         }
@@ -44,7 +44,7 @@ public class ProductService implements IProductService {
     }
 
     @Override
-    public Product createProduct(@NonNull Product product) {
+    public Product createProduct(Product product) {
         if (product.getName() == null || product.getName().trim().isEmpty()) {
             throw new InvalidParameterException("name", product.getName(), "Product name cannot be empty");
         }
@@ -64,7 +64,7 @@ public class ProductService implements IProductService {
     }
 
     @Override
-    public Product updateProduct(@NonNull String id, @NonNull Product product) {
+    public Product updateProduct(String id, Product product) {
         if (id.trim().isEmpty()) {
             throw new InvalidParameterException("id", id, "Product ID cannot be empty");
         }
@@ -81,7 +81,7 @@ public class ProductService implements IProductService {
     }
 
     @Override
-    public void deleteProduct(@NonNull String id) {
+    public void deleteProduct(String id) {
         if (id.trim().isEmpty()) {
             throw new InvalidParameterException("id", id, "Product ID cannot be empty");
         }
@@ -89,15 +89,15 @@ public class ProductService implements IProductService {
     }
 
     @Override
-    public List<Product> searchByName(@NonNull String query) {
+    public List<Product> searchByName(String query) {
         if (query.trim().isEmpty()) {
             throw new InvalidParameterException("query", query, "Search query cannot be empty");
         }
-        
+
         String lowerQuery = query.toLowerCase();
         return productRepository.findAll().stream()
                 .filter(p -> p.getName().toLowerCase().contains(lowerQuery))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -115,7 +115,7 @@ public class ProductService implements IProductService {
 
         return productRepository.findAll().stream()
                 .filter(p -> p.getPrice() >= minPrice && p.getPrice() <= maxPrice)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -123,33 +123,33 @@ public class ProductService implements IProductService {
         if (minRating < 0 || minRating > 5) {
             throw new InvalidRatingException(minRating);
         }
-        
+
         return productRepository.findAll().stream()
                 .filter(p -> p.getRating() >= minRating)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public List<Product> filterByCategory(@NonNull String category) {
+    public List<Product> filterByCategory(String category) {
         if (category.trim().isEmpty()) {
             throw new InvalidParameterException("category", category, "Category cannot be empty");
         }
-        
+
         List<Product> results = productRepository.findAll().stream()
                 .filter(p -> p.getSpecifications() != null)
                 .filter(p -> category.equalsIgnoreCase(p.getSpecifications().get("category")))
-                .collect(Collectors.toList());
-        
+                .toList();
+
         if (results.isEmpty()) {
             List<String> existingCategories = getAllCategories();
             boolean categoryExists = existingCategories.stream()
                     .anyMatch(cat -> cat.equalsIgnoreCase(category));
-            
+
             if (!categoryExists) {
                 throw new CategoryNotFoundException(category);
             }
         }
-        
+
         return results;
     }
 
@@ -161,30 +161,22 @@ public class ProductService implements IProductService {
                 .filter(cat -> cat != null && !cat.isEmpty())
                 .distinct()
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public List<Product> compareProducts(@NonNull List<String> productIds) {
+    public List<Product> compareProducts(List<String> productIds) {
         if (productIds.isEmpty()) {
             throw new InvalidParameterException("ids", productIds, "Product IDs list cannot be empty");
         }
-        
+
         if (productIds.size() > 10) {
-            throw new InvalidParameterException("ids", productIds, 
+            throw new InvalidParameterException("ids", productIds,
                     "Cannot compare more than 10 products at once");
         }
-        
-        List<Product> products = productIds.stream()
-                .map(this::getProductById) // Reuse getProductById to handle not found cases
-                .collect(Collectors.toList());
-
-        if (products.size() < productIds.size()) {
-            // This logic is implicitly handled by getProductById throwing an exception
-            // but could be enhanced to collect all missing IDs into one exception.
-        }
-
-        return products;
+        return productIds.stream()
+                    .map(this::getProductById)
+                    .toList();
     }
 
     @Override
@@ -195,7 +187,7 @@ public class ProductService implements IProductService {
         }
         return productRepository.findAll().stream()
                 .sorted(comparator)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -206,7 +198,7 @@ public class ProductService implements IProductService {
         }
         return productRepository.findAll().stream()
                 .sorted(comparator)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -215,28 +207,28 @@ public class ProductService implements IProductService {
             throw new InvalidParameterException("limit", limit, "Limit must be a positive number");
         }
         if (limit > 100) {
-            throw new InvalidParameterException("limit", limit, 
+            throw new InvalidParameterException("limit", limit,
                     "Limit cannot exceed 100. Please use a smaller value");
         }
-        
+
         return productRepository.findAll().stream()
                 .sorted(Comparator.comparingDouble(Product::getRating).reversed())
                 .limit(limit)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    public List<Product> findBySpecification(@NonNull String specKey, @NonNull String specValue) {
+    public List<Product> findBySpecification(String specKey, String specValue) {
         if (specKey.trim().isEmpty()) {
             throw new InvalidParameterException("key", specKey, "Specification key cannot be empty");
         }
         if (specValue.trim().isEmpty()) {
             throw new InvalidParameterException("value", specValue, "Specification value cannot be empty");
         }
-        
+
         return productRepository.findAll().stream()
                 .filter(p -> p.getSpecifications() != null)
                 .filter(p -> specValue.equalsIgnoreCase(p.getSpecifications().get(specKey)))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
